Memory-infra: Do not remove queued requests before completion

When a process terminates, the next queued dump can be removed if no
requests are pending and the associated queued dump is already finished.

BUG=759899

Change-Id: I389216df7dfee557297af10091ccd4d953f1b2a2
Reviewed-on: https://chromium-review.googlesource.com/653850
Commit-Queue: Siddhartha S <ssid@chromium.org>
Reviewed-by: Hector Dearman <hjd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500352}
Former-commit-id: c99b14d356a1b25cab8c365706f70c4df032e018